feat: Adequações LGPD e privacidade

--- a/backend/src/SupportSystem.Api/appsettings.Development.json
+++ b/backend/src/SupportSystem.Api/appsettings.Development.json
@@ -6,12 +6,15 @@
     }
   },
   "ConnectionStrings": {
-    "SupportSystem": "Server=(localdb)\\MSSQLLocalDB;Database=SupportSystemDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "SupportSystem": "CHANGE_ME_USING_SECRETS"
   },
   "Jwt": {
-    "Secret": "CHAVE_SUPER_SECRETA_SUPORTE_DEV_1234567890",
+    "Secret": "CHANGE_ME_USING_SECRETS",
     "Issuer": "SupportSystem",
     "Audience": "SupportSystemClients",
     "ExpirationMinutes": 60
+  },
+  "Privacy": {
+    "RetentionDays": 365
   }
 }
