--- a/backend/src/SupportSystem.Api/appsettings.json
+++ b/backend/src/SupportSystem.Api/appsettings.json
@@ -6,16 +6,23 @@
     }
   },
   "ConnectionStrings": {
-    "SupportSystem": "CHANGE_ME_USING_SECRETS"
+    "SupportSystem": "Server=(localdb)\\MSSQLLocalDB;Database=SupportSystemDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Secret": "CHANGE_ME_USING_SECRETS",
+    "Secret": "SupportSystemDevelopmentJwtSecret!2025",
     "Issuer": "SupportSystem",
     "Audience": "SupportSystemClients",
     "ExpirationMinutes": 60
   },
   "Privacy": {
     "RetentionDays": 365
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:4173",
+      "http://localhost:5173",
+      "http://127.0.0.1:4173"
+    ]
   },
   "AllowedHosts": "*"
 }
